Fix warnings in graphqlapi and persistence-api